# Meet-Greet

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  PROGRESS.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  plan-1-social-dining-app.md  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci-ai.yml  ci-api.yml  ci-terraform.yml  ci-web.yml  evals.yml  release.yml
assets/: brand.md
docs/: seed-content.md
services/ai/: Dockerfile  pyproject.toml
services/ai/app/: config.py  deps.py  main.py
services/ai/app/decks/: __init__.py  corpus.py  generate.py  ingest.py  moderate.py
services/ai/app/matching/: __init__.py  constraints.py  engine.py  models.py  scoring.py
services/ai/app/profiling/: __init__.py  archetypes.py  engine.py  models.py
services/ai/app/prompts/: deck_generate.md  judge_card_quality.md
services/ai/app/providers/: __init__.py  embeddings.py  errors.py  llm.py
services/ai/app/routers/: decks.py  embeddings.py  health.py  match.py  profile.py
services/ai/app/vectorstore/: __init__.py  base.py  factory.py  pgvector.py  qdrant.py
services/ai/evals/: run.py
services/ai/evals/generation/: eval.py
services/ai/evals/matching/: eval.py  generate_golden.py
services/ai/evals/matching/golden/: matching.jsonl
services/ai/evals/retrieval/: eval.py
services/ai/evals/retrieval/golden/: queries.jsonl
services/ai/tests/: conftest.py  test_config_and_providers.py  test_decks.py  test_health.py  test_internal_auth.py  test_matching.py  test_profiling.py
(+174 files in other folders)
